Frontend Design geändert (admin_dashbaord.html) -> Brauche Rückmeldung.. dann ändere ich user_dashboard.html

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" >
-    <link href="css/style.css" rel="stylesheet" >
+    <link href="css/login.css" rel="stylesheet" >
 
     <title>EasyDriving</title>
   </head>
@@ -35,7 +35,7 @@
            <input type="checkbox" value="remember-me"> Remember me
          </label>
        </div>
-       <a class="btn btn-dark btn-lg btn-primary btn-block" href="user_dashboard.html">Login</a>
+       <a class="btn btn-dark btn-lg btn-primary btn-block" href="admin_dashboard.html">Login</a>
     </form>
 
 
