--- a/web/user_dashboard.html
+++ b/web/user_dashboard.html
@@ -1,129 +1,186 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
+<!DOCTYPE html>
+<html>
+
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Collapsible sidebar using Bootstrap 4</title>
 
     <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" >
-    <link href="css/style.css" rel="stylesheet" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>EasyDriving</title>
-
-  </head>
-  <body>
-
-    <!-- jQuery first, then Popper.js-->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <!-- Awesome Font CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- Awesome Font JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 
 
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">EasyDriving</a>
-      <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="index.html">Logout</a>
-        </li>
-      </ul>
-    </nav>
+    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link active" href="user_dashboard.html">
-                  <span data-feather="dashboard"></span>
-                  Übersicht<span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="user_new.html">
-                  <span data-feather="new"></span>
-                  Auftragserstellung
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="user_profil.html">
-                  <span data-feather="profil"></span>
-                  Profil
-                </a>
-              </li>
+    <!-- Font table css -->
+    <link rel='stylesheet' href='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.css'>
+    <link rel='stylesheet' href='http://rawgit.com/vitalets/x-editable/master/dist/bootstrap3-editable/css/bootstrap-editable.css'>
+    
+    <!-- Table JS -->
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/editable/bootstrap-table-editable.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/export/bootstrap-table-export.js'></script>
+    <script src='http://rawgit.com/hhurz/tableExport.jquery.plugin/master/tableExport.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/filter-control/bootstrap-table-filter-control.js'></script>
+
+    <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="css/admin.css">
+
+    <!-- Our Custom JS -->
+    <script src="js/scripts.js"></script>
+
+    </head>
+
+    <body>
+
+
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>EasyDriving</h3>
+                <strong><img src="img/logo.png" width="80px"></strong>
+            </div>
+
+            <ul class="list-unstyled components">
+                <li class="active"> <!-- aktiviert (auf der Seite) -->
+                    <a href="#rental" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <i class="fas fa-key"></i>
+                        Rental
+                    </a>
+                    <ul class="collapse list-unstyled" id="rental">
+                        <li>
+                            <a href="#currently">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#open">NewOrder</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Profil">
+                        <i class="fas fa-user"></i>
+                        Profil
+                    </a>
+                </li>
+                <li>
+                    <a href="#Support">
+                        <i class="fas fa-question"></i>
+                        Support
+                    </a>
+                </li>
             </ul>
-          </div>
+
         </nav>
 
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 ">
-          <h1 class="h2">Übersicht</h1>
-          <div class="btn-toolbar mb-2 mb-md-0">
-            <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-              Filter
-            </button>
-          </div>
-        </div>
+        <!-- Page Content  -->
+        <div id="content">
 
-      <div class="table-responsive">
-        <table class="table table-striped table-sm">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>AuftragsID</th>
-              <th>Fahrzeug</th>
-              <th>Abholdatum</th>
-              <th>Rückgabedatum</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="#details">Details</a></td>
-              <td>1</td>
-              <td>Seat Mii</td>
-              <td>10.01.2018</td>
-              <td>12.01.2018</td>
-            </tr>
-            <tr>
-              <td><a href="#details">Details</a></td>
-              <td>2</td>
-              <td>Toyota Aygo</td>
-              <td>13.03.2018</td>
-              <td>14.03.2018</td>
-            </tr>
-            <tr>
-              <td><a href="#details">Details</a></td>
-              <td>3</td>
-              <td>Audi A1</td>
-              <td>05.04.2018</td>
-              <td>03.09.2018</td>
-            </tr>
-            <tr>
-              <td><a href="#details">Details</a></td>
-              <td>4</td>
-              <td>Elektro-Golf</td>
-              <td>07.09.2018</td>
-              <td>10.10.2018</td>
-            </tr>
-            <tr>
-              <td><a href="#details">Details</a></td>
-              <td>5</td>
-              <td>Audi A3</td>
-              <td>17.10.2018</td>
-              <td>01.02.2018</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </main>
-  </div>
-</div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+
+                    <button type="button" id="sidebarCollapse" class="btn btn-dark btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Menu</span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto" style="text-align: right; padding-top: 10px;">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Logout</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="container">
+
+            <table id="table"
+                 data-toggle="table"
+                 data-search="true"
+                 data-filter-control="true"
+                 data-click-to-select="true"
+                 data-toolbar="#toolbar">
+            <thead>
+              <tr>
+                <th data-field="state" data-checkbox="true"></th>
+          			<th data-field="prenom" data-filter-control="input" data-sortable="true">ID</th>
+          			<th data-field="date" data-filter-control="select" data-sortable="true">Fahrzeug</th>
+          			<th data-field="examen" data-filter-control="select" data-sortable="true">Abholdatum</th>
+          			<th data-field="note" data-sortable="true">Rückgabedatum</th>
+          		</tr>
+          	</thead>
+          	<tbody>
+          		<tr>
+          			<td class="bs-checkbox "><input data-index="0" name="btSelectItem" type="checkbox"></td>
+                <td>1</td>
+                <td>Seat Mii</td>
+                <td>10/01/2018</td>
+                <td>12/01/2018</td>
+              </tr>
+              <tr>
+                <td class="bs-checkbox "><input data-index="1" name="btSelectItem" type="checkbox"></td>
+                <td>2</td>
+                <td>Toyota Aygo</td>
+                <td>13/03/18</td>
+                <td>14/03/18</td>
+              </tr>
+              <tr>
+                <td class="bs-checkbox "><input data-index="2" name="btSelectItem" type="checkbox"></td>
+                <td>3</td>
+                <td>Audi A1</td>
+                <td>05/04/18</td>
+                <td>03/09/18</td>
+              </tr>
+              <tr>
+                <td class="bs-checkbox "><input data-index="3" name="btSelectItem" type="checkbox"></td>
+                <td>4</td>
+                <td>Elektro-Golf</td>
+                <td>07/09/18</td>
+                <td>10/10/18</td>
+              </tr>
+              <tr>
+                <td class="bs-checkbox "><input data-index="4" name="btSelectItem" type="checkbox"></td>
+                <td>5</td>
+                <td>Audi A3</td>
+                <td>17/10/18</td>
+                <td>01/02/2018</td>
+              </tr>
+             </tbody>
+            </table>
+
+                <div id="table_icon" style="cursor: pointer;">
+                  <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                  <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                  <a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
 
 </body>
+
 </html>
