--- a/web/user_new.html
+++ b/web/user_new.html
@@ -1,98 +1,151 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
+<!DOCTYPE html>
+<html>
+
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Collapsible sidebar using Bootstrap 4</title>
 
     <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" >
-    <link href="css/style.css" rel="stylesheet" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>EasyDriving</title>
-
-  </head>
-  <body>
-
-    <!-- jQuery first, then Popper.js-->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <!-- Awesome Font CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+    <!-- Awesome Font JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 
 
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">EasyDriving</a>
+    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="index.html">Logout</a>
-        </li>
+    <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="css/admin.css">
 
-      </ul>
+    <!-- Our Custom JS -->
+    <script src="js/scripts.js"></script>
 
-    </nav>
+    </head>
 
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link" href="user_dashboard.html">
-                  <span data-feather="dashboard"></span>
-                  Übersicht
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="user_new.html">
-                  <span data-feather="new"></span>
-                  Auftragserstellung<span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="user_profil.html">
-                  <span data-feather="profil"></span>
-                  Profil
-                </a>
-              </li>
+    <body>
+
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>EasyDriving</h3>
+                <strong><img src="img/logo.png" width="80px"></strong>
+            </div>
+
+            <ul class="list-unstyled components">
+                <li class="active"> <!-- aktiviert (auf der Seite) -->
+                    <a href="#rental" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <i class="fas fa-key"></i>
+                        Rental
+                    </a>
+                    <ul class="collapse list-unstyled" id="rental">
+                        <li>
+                            <a href="#currently">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#open">NewOrder</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Profil">
+                        <i class="fas fa-user"></i>
+                        Profil
+                    </a>
+                </li>
+                <li>
+                    <a href="#Support">
+                        <i class="fas fa-question"></i>
+                        Support
+                    </a>
+                </li>
             </ul>
-          </div>
+
         </nav>
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 ">
-            <h1 class="h2">Neuen Auftrag erstellen</h1>
-          </div>
 
-          <form>
-            <div class="form-row">
-              <div class="form-group">
-                <label for="inputReason">Leihgrund</label>
-                <textarea class="form-control" id="reason" rows="3"></textarea>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputDate">Abholdatum</label>
-                <input type="text" class="form-control" id="inputDate">
-              </div>
-              <div class="form-group col-md-4">
-                <label for="inputCarID">Fahrzeug</label>
-                <select id="inputCarID" class="form-control">
-                  <option selected>Auswählen</option>
-                  <option>...</option>
-                </select>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary">buchen</button>
-          </form>
+        <!-- Page Content  -->
+        <div id="content">
 
-        </main>
-      </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+
+                    <button type="button" id="sidebarCollapse" class="btn btn-dark btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Menu</span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto" style="text-align: right; padding-top: 10px;">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Logout</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="container">
+
+
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 ">
+                  <h1 class="h2">Neuen Auftrag erstellen</h1>
+                </div>
+
+                <form>
+                  <div class="form-row">
+                    <div class="form-group col-md-4">
+                      <label for="inputReason">Leihgrund</label>
+                      <textarea class="form-control" id="reason" rows="3"></textarea>
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-4">
+                      <label for="inputReason" style="padding-bottom: 10px">Leihdatum</label>
+
+                      <input id="inputDateAbhol" width="300" value="Abholdatum: " />
+                      </p>
+                      <input id="inputDateRück" width="300" value="Rückgabedatum: " />
+                      <script>
+                          $('#inputDateAbhol').datetimepicker({ footer: true, modal: true });
+                          $('#inputDateRück').datetimepicker({ footer: true, modal: true });
+                      </script>
+                    </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-4">
+                      <label for="inputCarID">Fahrzeug</label>
+                      <select id="inputCarID" class="form-control">
+                        <option selected>Auswählen</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary btn-dark">buchen</button>
+                </form>
+
+
+
+            </div>
+
+        </div>
     </div>
 
 </body>
+
 </html>
