--- a/web/user_new.html
+++ b/web/user_new.html
@@ -79,6 +79,8 @@
         <!-- Page Content  -->
         <div id="content">
 
+          <script src="js/checklogin.js"></script>
+
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
