--- a/web/admin_dashboard.html
+++ b/web/admin_dashboard.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
-    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
     <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
     <!-- Font table css -->
@@ -82,6 +82,8 @@
 
         <!-- Page Content  -->
         <div id="content">
+
+          <script src="js/checklogin.js"></script>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -190,9 +192,16 @@
     <script src='http://rawgit.com/hhurz/tableExport.jquery.plugin/master/tableExport.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/filter-control/bootstrap-table-filter-control.js'></script>
 
+    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
     <!-- Our Custom JS -->
     <script src="js/scripts.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
+
+    <!-- Our Custom JS -->
+    <script src="js/initfirebase.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 
