--- a/web/user_dashboard.html
+++ b/web/user_dashboard.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
-    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
     <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
     <!-- Font table css -->
@@ -26,6 +26,8 @@
 
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="css/admin.css">
+
+
 
     </head>
 
@@ -51,7 +53,7 @@
                             <a href="#currently">Overview</a>
                         </li>
                         <li>
-                            <a href="#open">NewOrder</a>
+                            <a href="user_new">NewOrder</a>
                         </li>
                     </ul>
                 </li>
@@ -74,6 +76,8 @@
         <!-- Page Content  -->
         <div id="content">
 
+          <script src="js/checklogin.js"></script>
+          
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
@@ -156,8 +160,7 @@
                   <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                   <a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
                 </div>
-
-            </div>
+          </div>
 
         </div>
     </div>
@@ -176,6 +179,8 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/export/bootstrap-table-export.js'></script>
     <script src='http://rawgit.com/hhurz/tableExport.jquery.plugin/master/tableExport.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/filter-control/bootstrap-table-filter-control.js'></script>
+
+    <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
 
     <!-- Our Custom JS -->
     <script src="js/scripts.js"></script>
