--- a/web/admin_rental_currently.html
+++ b/web/admin_rental_currently.html
@@ -198,6 +198,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
     <!-- Our Custom JS -->
+    <script src="firebaseinit.js"></script>
     <script src="js/login.js"></script>
 
 
