--- a/web/admin_user_all.html
+++ b/web/admin_user_all.html
@@ -121,10 +121,11 @@
           			<th data-field="prenom" data-filter-control="input" data-sortable="true">UID</th>
           			<th data-field="date" data-filter-control="select" data-sortable="true">Email</th>
           			<th data-field="examen" data-filter-control="select" data-sortable="true">Rolle</th>
-          			<th data-field="note" data-sortable="true">photoURL</th>
+          			<th data-field="note" data-sortable="true">Foto</th>
           		</tr>
+
           	</thead>
-            <tbody>
+            <tbody id="user_table_body">
 
              </tbody>
             </table>
@@ -165,7 +166,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
     <!-- Our Custom JS -->
-
+    <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
     <script src="js/write_user_table.js"></script>
 
