Scripts wieder hinzugefügt ^^ brauchen wir doch

--- a/web/admin_rantal_overview.html
+++ b/web/admin_rantal_overview.html
@@ -42,19 +42,11 @@
             </div>
 
             <ul class="list-unstyled components">
+
                 <li class="active"> <!-- aktiviert (auf der Seite) -->
-                    <a href="#rental" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-key"></i>
-                        Rental
+                    <a href="admin_rental_overview.html">
+                        Rental Overview
                     </a>
-                    <ul class="collapse list-unstyled" id="rental">
-                        <li>
-                            <a href="admin_rental_currently.html">currently</a>
-                        </li>
-                        <li>
-                            <a href="admin_rental_open.html">open</a>
-                        </li>
-                    </ul>
                 </li>
                 <li>
                     <a href="#user" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
@@ -197,6 +189,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
     <!-- Our Custom JS -->
+    <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
 
