--- a/web/admin_user_all.html
+++ b/web/admin_user_all.html
@@ -42,20 +42,11 @@
             </div>
 
             <ul class="list-unstyled components">
-                <li>
-                    <a href="#rental" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-key"></i>
-                        Rental
-                    </a>
-                    <ul class="collapse list-unstyled" id="rental">
-                        <li>
-                            <a href="admin_rental_currently.html">currently</a>
-                        </li>
-                        <li>
-                            <a href="admin_rental_open.html">open</a>
-                        </li>
-                    </ul>
-                </li>
+              <li>
+                  <a href="admin_rental_overview.html">
+                      Rental Overview
+                  </a>
+              </li>
                 <li class="active"> <!-- aktiviert (auf der Seite) -->
                     <a href="#user" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <i class="fas fa-users"></i>
@@ -165,6 +156,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
     <!-- Our Custom JS -->
+    <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
     <script src="js/write_user_table.js"></script>
