--- a/web/user_rental_currently.html
+++ b/web/user_rental_currently.html
@@ -44,18 +44,9 @@
 
             <ul class="list-unstyled components">
                 <li class="active"> <!-- aktiviert (auf der Seite) -->
-                    <a href="#rental" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-key"></i>
-                        Rental
+                    <a href="admin_rental_overview.html">
+                        Rental Overview
                     </a>
-                    <ul class="collapse list-unstyled" id="rental">
-                        <li>
-                            <a href="user_rental_currently.html">Overview</a>
-                        </li>
-                        <li>
-                            <a href="user_rental_new.html">NewOrder</a>
-                        </li>
-                    </ul>
                 </li>
                 <li>
                     <a href="user_profil.html">
@@ -183,6 +174,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
     <!-- Our Custom JS -->
+    <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
 
