--- a/web/admin_carpool_overview.html
+++ b/web/admin_carpool_overview.html
@@ -43,7 +43,7 @@
 
             <ul class="list-unstyled components">
 
-                <li class="active"> <!-- aktiviert (auf der Seite) -->
+                <li> <!-- aktiviert (auf der Seite) -->
                     <a href="admin_rental_overview.html">
                         Rental Overview
                     </a>
@@ -62,7 +62,7 @@
                         </li>
                     </ul>
                 </li>
-                <li>
+                <li class="active">
                     <a href="#user" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <i class="fas fa-car"></i>
                         CarPool
