--- a/web/admin_user_all.html
+++ b/web/admin_user_all.html
@@ -62,10 +62,18 @@
                     </ul>
                 </li>
                 <li>
-                <a href="admin_carpool.html">
-                    <i class="fas fa-car"></i>
-                    CarPool
-                </a>
+                    <a href="#user" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <i class="fas fa-car"></i>
+                        CarPool
+                    </a>
+                    <ul class="collapse list-unstyled" id="user">
+                        <li>
+                            <a href="admin_carpool_overview.html">Overview</a>
+                        </li>
+                        <li>
+                            <a href="admin_carpool_new.html">NewCar</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
 
