--- a/web/user_rental_overview.html
+++ b/web/user_rental_overview.html
@@ -44,7 +44,8 @@
 
             <ul class="list-unstyled components">
                 <li class="active"> <!-- aktiviert (auf der Seite) -->
-                    <a href="admin_rental_overview.html">
+                    <a href="user_rental_overview.html">
+                      <i class="fas fa-key"></i>
                         Rental Overview
                     </a>
                 </li>
