--- a/web/admin_carpool_overview.html
+++ b/web/admin_carpool_overview.html
@@ -45,6 +45,7 @@
 
                 <li> <!-- aktiviert (auf der Seite) -->
                     <a href="admin_rental_overview.html">
+                      <i class="fas fa-key"></i>
                         Rental Overview
                     </a>
                 </li>
