--- a/web/admin_user_all.html
+++ b/web/admin_user_all.html
@@ -44,6 +44,7 @@
             <ul class="list-unstyled components">
               <li>
                   <a href="admin_rental_overview.html">
+                    <i class="fas fa-key"></i>
                       Rental Overview
                   </a>
               </li>
@@ -62,18 +63,10 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#user" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-car"></i>
-                        CarPool
-                    </a>
-                    <ul class="collapse list-unstyled" id="user">
-                        <li>
-                            <a href="admin_carpool_overview.html">Overview</a>
-                        </li>
-                        <li>
-                            <a href="admin_carpool_new.html">NewCar</a>
-                        </li>
-                    </ul>
+                  <a href="admin_support.html">
+                    <i class="fas fa-question"></i>
+                      Support
+                  </a>
                 </li>
             </ul>
 
