--- a/web/admin_user_new.html
+++ b/web/admin_user_new.html
@@ -43,7 +43,8 @@
 
             <ul class="list-unstyled components">
               <li>
-                  <a href="admin_rental_overview.html">
+                  <a href="user_rental_overview.html">
+                    <i class="fas fa-key"></i>
                       Rental Overview
                   </a>
               </li>
@@ -62,18 +63,12 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#user" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-car"></i>
-                        CarPool
+                  <li>
+                    <a href="admin_support.html">
+                      <i class="fas fa-question"></i>
+                        Support
                     </a>
-                    <ul class="collapse list-unstyled" id="user">
-                        <li>
-                            <a href="admin_carpool_overview.html">Overview</a>
-                        </li>
-                        <li>
-                            <a href="admin_carpool_new.html">NewCar</a>
-                        </li>
-                    </ul>
+                  </li>
                 </li>
             </ul>
 
