blöd nochmal verbessert

--- a/web/admin_carpool_overview.html
+++ b/web/admin_carpool_overview.html
@@ -64,11 +64,11 @@
                     </ul>
                 </li>
                 <li class="active">
-                    <a href="#user" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <a href="#carpool" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <i class="fas fa-car"></i>
                         CarPool
                     </a>
-                    <ul class="collapse list-unstyled" id="user">
+                    <ul class="collapse list-unstyled" id="carpool">
                         <li>
                             <a href="admin_carpool_overview.html">Overview</a>
                         </li>
@@ -76,6 +76,12 @@
                             <a href="admin_carpool_new.html">NewCar</a>
                         </li>
                     </ul>
+                </li>
+                <li>
+                  <a href="admin_support.html">
+                    <i class="fas fa-question"></i>
+                      Support
+                  </a>
                 </li>
             </ul>
 
