--- a/web/admin_carpool_new.html
+++ b/web/admin_carpool_new.html
@@ -62,7 +62,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="active">
+                <li>
                     <a href="#carpool" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <i class="fas fa-car"></i>
                         CarPool
@@ -77,12 +77,10 @@
                     </ul>
                 </li>
                 <li>
-                  <li>
                     <a href="admin_support.html">
                       <i class="fas fa-question"></i>
                         Support
                     </a>
-                  </li>
                 </li>
             </ul>
 
@@ -121,19 +119,19 @@
                   <div class="row">
                       <div class="col-md-3"></div>
                       <div class="col-md-6">
-                          <h2>Register New User</h2>
+                          <h2>Auto hinzufügen</h2>
                           <hr>
                       </div>
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
-                          <label for="name">Name</label>
+                          <label for="marke">Marke</label>
                       </div>
                       <div class="col-md-6">
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                  <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-user"></i></div>
-                                  <input type="text" name="name" class="form-control" id="name"
+                                  <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-car"></i></div>
+                                  <input type="text" name="marke" class="form-control" id="marke"
                                          placeholder="John Doe" required autofocus>
                               </div>
                           </div>
@@ -148,13 +146,13 @@
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
-                          <label for="email">E-Mail Address</label>
+                          <label for="modell">Modell</label>
                       </div>
                       <div class="col-md-6">
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
-                                  <input type="text" name="email" class="form-control" id="email"
+                                  <input type="text" name="modell" class="form-control" id="modell"
                                          placeholder="you@example.com" required autofocus>
                               </div>
                           </div>
@@ -169,13 +167,13 @@
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
-                          <label for="password">Password</label>
+                          <label for="kraftstoff">Kraftstoff</label>
                       </div>
                       <div class="col-md-6">
                           <div class="form-group has-danger">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
-                                  <input type="password" name="password" class="form-control" id="password"
+                                  <input type="password" name="kraftstoff" class="form-control" id="kraftstoff"
                                          placeholder="Password" required>
                               </div>
                           </div>
@@ -190,7 +188,7 @@
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
-                          <label for="password">Confirm Password</label>
+                          <label for="schaltung">Schaltung</label>
                       </div>
                       <div class="col-md-6">
                           <div class="form-group">
@@ -198,8 +196,104 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="password-confirmation" class="form-control"
-                                         id="password-confirm" placeholder="Password" required>
+                                  <input type="password" name="schaltung" class="form-control"
+                                         id="schaltung" placeholder="Password" required>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-3 field-label-responsive">
+                          <label for="tueren">Türen</label>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                                  <div class="input-group-addon" style="width: 2.6rem">
+                                      <i class="fa fa-redo"></i>
+                                  </div>
+                                  <input type="password" name="tueren" class="form-control"
+                                         id="tueren" placeholder="Password" required>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-3 field-label-responsive">
+                          <label for="klima">Klima</label>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                                  <div class="input-group-addon" style="width: 2.6rem">
+                                      <i class="fa fa-redo"></i>
+                                  </div>
+                                  <input type="password" name="klima" class="form-control"
+                                         id="klima" placeholder="Password" required>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-3 field-label-responsive">
+                          <label for="navigationsgeraet">Navigationsgerät</label>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                                  <div class="input-group-addon" style="width: 2.6rem">
+                                      <i class="fa fa-redo"></i>
+                                  </div>
+                                  <input type="password" name="navigationsgeraet" class="form-control"
+                                         id="navigationsgeraet" placeholder="Password" required>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-3 field-label-responsive">
+                          <label for="plaetze">Plätze</label>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                                  <div class="input-group-addon" style="width: 2.6rem">
+                                      <i class="fa fa-redo"></i>
+                                  </div>
+                                  <input type="password" name="plaetze" class="form-control"
+                                         id="plaetze" placeholder="Password" required>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-3 field-label-responsive">
+                          <label for="raucherwage">Raucherwagen</label>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                                  <div class="input-group-addon" style="width: 2.6rem">
+                                      <i class="fa fa-redo"></i>
+                                  </div>
+                                  <input type="password" name="raucherwage" class="form-control"
+                                         id="raucherwage" placeholder="Password" required>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-3 field-label-responsive">
+                          <label for="stellplatznummer">Stellplatznummer</label>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="form-group">
+                              <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                                  <div class="input-group-addon" style="width: 2.6rem">
+                                      <i class="fa fa-redo"></i>
+                                  </div>
+                                  <input type="password" name="stellplatznummer" class="form-control"
+                                         id="stellplatznummer" placeholder="Password" required>
                               </div>
                           </div>
                       </div>
@@ -207,7 +301,7 @@
                   <div class="row">
                       <div class="col-md-3"></div>
                       <div class="col-md-6">
-                          <button type="submit" class="btn btn-success" onclick="register()"><i class="fa fa-user-plus"></i> Register</button>
+                          <button type="submit" class="btn btn-success" onclick="register()"><i class="fa fa-car"></i> Register</button>
                       </div>
                   </div>
               </form>
